[package]
name = "revmc-examples-univ2"
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[build-dependencies]
revmc = { workspace = true, features = ["llvm-prefer-dynamic"] }
revmc-build.workspace = true
cc = "1.0"

[dependencies]
revmc-builtins = { workspace = true, default-features = false }
revmc-context = { workspace = true, default-features = false }

revm = { workspace = true, default-features = false, features = ["ethersdb", "hashbrown", "serde", "alloydb"] }
#revmPlus = {path = "../../../BlindArbitrage/SharedModel_rs/crates/revmPlus"}

tracing-subscriber = { version = "0.3.17", features = ["tracing-log", "env-filter"]}
tracing = {version = "0.1.41"}
ethers-providers = { version = "2.0.14" }
ethers-core = { version = "2.0.14" }
alloy-primitives = "0.8.21"
alloy = { version = "0.11.1", features = [
    "network",
    "providers",
    "provider-http",
    "provider-ws",
    "rpc-client",
    "rpc-types-eth",
    "signer-yubihsm",
    "rpc-types",
    "rpc-types-trace",
    "sol-types",
] }

tokio = { version = "1.43.0", features = ["full"]}
anyhow = "1.0.96"
